--- a/main_file.tex
+++ b/main_file.tex
@@ -52,12 +52,12 @@
 \tableofcontents
 \listoffigures
 \listoftables
+\listofalgorithms
 \input{part1/chap1.tex}
 \input{part2/PPC.tex}
 \input{part3/PLNE.tex}
 \input{part4/expe.tex}
 
-\printindex
 
 \bibliographystyle{alpha}
 \bibliography{main_file}
