--- a/part2/CECSP/tabularLS.tex
+++ b/part2/CECSP/tabularLS.tex
@@ -1,5 +1,5 @@
 \subcaptionbox{$t_2$ pour le placement à gauche}[0.45\linewidth]{
-{\rotatebox{90}{\small
+\small
     \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
 \hline \rule[-0.8em]{0pt}{2em} $\bmin=0$ & \multicolumn{2}{c|}{$W_i\le
 f_i(\bmin)(\LE -\ES )$} & \multicolumn{2}{c|}{$W_i\ge f_i(\bmin)(\LE
@@ -10,11 +10,9 @@ $}\\ \hline $\inter[t_1][\LE ]$ & $\inter[t_1][\LE ]$& $[
 t_1,\bu{t_1}[ $ & $\inter[t_1][\LE ]$& $[ t_1,\bu{t_1}[ $ \\ \hline
     \end{tabular}
   }
-}
-}
 \hspace{0.8cm}
 \subcaptionbox{$t_1$ pour le placement à gauche}[0.45\linewidth]{
-  {\rotatebox{90}{\small
+  \small
      \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
       \hline
       \rule[-0.8em]{0pt}{2em} $\bmin=0$ & 
@@ -42,10 +40,6 @@ t_1,\bu{t_1}[ $ & $\inter[t_1][\LE ]$& $[ t_1,\bu{t_1}[ $ \\ \hline
                                              ][t_2]$& $[\bup{t_2},t_2[  $ & $\inter[\ES
                                              ][t_2]$& $[\bup{t_2},t_2[  $ \\
       \hline
-    \end{tabular}    }}
+    \end{tabular}   
 }
-
-
-
-
 
