--- a/part2/CECSP/time_filter.tex
+++ b/part2/CECSP/time_filter.tex
@@ -157,7 +157,7 @@ moins exécutée à $\bmin$ (voir figure~\ref{fig_mand_CECSP_c}).
       }
     \end{tikzpicture}
 }
-\caption{Partie obligatoire d'une activité $i$}
+\caption{Partie obligatoire d'une activité $i$ pour le \CECSP.}
 \label{fig_mand_CECSP}
 \end{figure}
 \end{ex}
@@ -345,7 +345,7 @@ figure~\ref{fig:disj_CECSPc}).
 
   \end{tikzpicture}
 }
-  \caption{Raisonnement disjonctif}
+  \caption{Raisonnement disjonctif pour le \CECSP.}
   \label{fig:disj_CECSP}
 \end{figure}
 \end{ex}
@@ -414,7 +414,8 @@ elle intersecte forcément $moi_i$.
     \end{tikzpicture}
   \end{center}
 
-  \caption{Intervalle minimum de superposition d'une activité}
+  \caption{Intervalle minimum de superposition d'une activité dans le
+    cadre du \CECSP.}
   \label{fig:moi_CECSP}
 \end{figure}
 \end{ex}
@@ -630,7 +631,7 @@ Considérons les deux activités suivantes:
        % \draw[densely dotted] (6,-0.1) -- (6,5.5) node[above] {$\ES[j]^{'}$};
       % \draw[->] (1.8,5.8) -- (5.2,5.8);  
     \end{tikzpicture}
-    \caption{Illustration du Time-Table disjonctif}
+    \caption{Illustration du Time-Table disjonctif pour le \CECSP.}
     \label{fig:TTDR_CUSP}
   \end{figure}
 L'intervalle $moi_i=[4,8]$ est complètement inclus dans l'intervalle
