--- a/part1/ordo_nrj.tex
+++ b/part1/ordo_nrj.tex
@@ -118,7 +118,7 @@ $f_i$:
 \right.
 \]
 De plus, en l'absence de toute ambiguïté et pour simplifier les
-notations, on pourra écrire $f_i(b)$ au lieu de $f_i(b_i(t))$.
+notations, en particulier lors de on pourra écrire $f_i(b)$ au lieu de $f_i(b_i(t))$.
 
 \begin{ex}
   \label{ex_approx_CECSP}
@@ -197,7 +197,8 @@ notations, on pourra écrire $f_i(b)$ au lieu de $f_i(b_i(t))$.
         \draw[dotted] (0.75,0) -- (0.75,1.3);
         \draw[dotted] (1,0) -- (1,1.3);
       \end{tikzpicture}}
-    \caption{Approximation d'une fonction de rendement non linéaire.}
+    \caption{Exemple d'approximation d'une fonction de rendement non
+      linéaire par une fonction affine et par une fonction concave et affine par morceaux.}
     \label{approx}
   \end{figure}
 
@@ -377,9 +378,9 @@ b+4 & & b \in ]4,5]
 \begin{tikzpicture}
 [xscale=1.65,yscale=0.56]
 \node (O) at (2,5) {};
-\draw[->] (2,4) -- (5.5,4);
+\draw[->] (2,4) -- (5.5,4) node[below] {$b$}; 
 \draw[dashed] (2,4) -- (2,5.5);
-\draw[->] (2,5.5) -- (2,10);
+\draw[->] (2,5.5) -- (2,10) node[left] {$f(b)$};
 
 
 \path[draw] (3,6) -- (4,8) -- (5,9) ;
@@ -425,8 +426,8 @@ f_2(4)= 6 + 8 + 8 =22$.
 \begin{tikzpicture}
 [xscale=0.75,yscale=0.56]
 \node (O) at (0,0) {};
-\draw[->] (0,0) -- (6.5,0);
-\draw[->] (0,0) -- (0,5.5);
+\draw[->] (0,0) -- (6.5,0) node[below] {$t$};
+\draw[->] (0,0) -- (0,5.5) node[left] {$b(t)$};
 
 \draw (0,2) rectangle (2,5) node[midway] {$1$};
 \path[draw] (0,2) -- (3,2) -- (3,1) node[left=0.4cm] {$3$} -- (5,1) -- (5,5) -- (6,5)  -- (6,0);
@@ -446,7 +447,7 @@ f_2(4)= 6 + 8 + 8 =22$.
 \draw (-0.1,\i) -- (0,\i);
 }
 \end{tikzpicture}
-\caption{Solution de l'instance du \CECSP.}
+\caption{Exemple de solution pour le \CECSP.}
 \label{sol_ex_CECSP}
 \end{figure}
 \end{ex}
@@ -674,11 +675,12 @@ L'unique solution est décrite par la figure~\ref{figure_exemple_NE}.
       \node (T) at (3.5,0) {};
       \node at (0.75,1) {0};
       \node at (2.25,1) {1};
-      \draw[dashed] (-0.5,2) -- (3.5,2) node[right,node
+      \draw(0,2)  node[left,node
       distance=1.5pt] {$R=2$}; 
       \draw (O) rectangle (1.5,2);
       \draw (1.5,2) rectangle (3,0);
-      \draw[->] (-0.5,0) -- (T);
+      \draw[->] (0,0) -- (T) node[below] {$t$};
+      \draw[->] (0,0) -- (0,3) node[left] {$b(t)$};
     \end{tikzpicture}
     \caption{Exemple de solution non-entière pour une instance du
       \CECSP~à données entières.}
