--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -16,7 +16,7 @@ limitations.
 
 \subsubsection{Le problème d'ordonnancement de projet à contraintes de
 ressources}
-\index{\RCPSPidx}
+
 Le problème d'ordonnancement de projet à contraintes de ressources
 (\RCPSP) est un problème d'ordonnancement très général, utilisé pour
 modéliser de nombreux problèmes pratiques. Le but est
@@ -30,32 +30,32 @@ projet, le retard ou les coûts peuvent être minimisées.
 
 Formellement, le \RCPSP~est défini de la manière suivante: nous
 considérons un ensemble d'activités non préemptives $\A=\{1,\dots,n\}$
-à ordonnancer et un ensemble $\R$ de ressources cumulatives et
-renouvelables. Chacune de ces ressources $k \in \R$ est disponible
-tout au long du projet en quantité $R_k$ et, durant son exécution, une
-activité consomme une quantité constante $r_{ik}$ (pouvant être nulle)
-de cette ressource. Dans ce problème, une activité $i \in \A$ a une
-durée fixe $p_i$ et des relations de précédence lient les activités
-entre elles. Ces relations sont modélisées à l'aide d'un
-graphe $G=(V,E)$, appelé graphe de précédence, dans lequel l'ensemble
-des arcs $(i,j) \in E$ représente les relations de précédence,
-i.e. $(i,j) \in E \Leftrightarrow i $ doit être ordonnancée avant $j$
-dans toute solution. Dans ce graphe, l'ensemble des sommets, noté
-$V=\{0,\dots,n+1\}$, correspond aux $n$ activités auxquelles on 
-ajoute deux activités fictives $0$ et $n+1$ qui représentent
-respectivement le début et la fin du projet. Ces activités fictives ne
-consomment pas de ressource et ont une durée d'exécution nulle. De
-plus, $E$ contient les arcs suivants:
+à ordonnancer et un ensemble $\R=\{1,\dots,m\}$ de ressources
+discrètes, cumulatives et renouvelables. Chacune de ces ressources $k
+\in \R$ est disponible tout au long du projet en quantité $R_k$ et,
+durant son exécution, une activité consomme une quantité constante
+$r_{ik}$ (pouvant être nulle) de cette ressource. Dans ce problème,
+une activité $i \in \A$ a une durée fixe $p_i$ et des relations de
+précédence lient les activités entre elles. Ces relations sont
+modélisées à l'aide d'un graphe $G=(V,E)$, appelé graphe de
+précédence, dans lequel l'ensemble des arcs $(i,j) \in E$ représente
+les relations de précédence, i.e. $(i,j) \in E \Leftrightarrow i $
+doit être ordonnancée avant $j$ dans toute solution. Dans ce graphe,
+l'ensemble des sommets, noté $V=\{0,\dots,n+1\}$, correspond aux $n$
+activités auxquelles on ajoute deux activités fictives $0$ et $n+1$
+qui représentent respectivement le début et la fin du projet. Ces
+activités fictives ne consomment pas de ressource et ont une durée
+d'exécution nulle. De plus, $E$ contient les arcs suivants:
 \begin{itemize}
 \item $(0,i),\ \forall i \in \A$,
 \item $(i,n+1),\ \forall i \in \A$.
 \end{itemize}
 
-Pour ce problème, la fonction objectif la
-plus rencontrée dans la littérature étant la minimisation de la date
-de fin du projet, i.e. $C_{max}$, nous considérons principalement cet
-objectif dans la suite de ce manuscrit. Si un objectif différent est
-considéré, nous le précisons. 
+Pour ce problème, la fonction objectif la plus rencontrée dans la
+littérature étant la minimisation de la date de fin du projet,
+i.e. $C_{max}$, nous considérons principalement cet objectif dans la
+suite de ce manuscrit. Si un objectif différent est considéré, nous le
+précisons.
 
 L'objectif du problème est donc de déterminer la date de début $st_i$
 de chaque activité $i\in \A$ de telle sorte que:
@@ -135,7 +135,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         \node (O) at (0,0) {};
         \node (bmax) at (0,5) {};
 
-        \draw[->] (O.center) -- (16,0);
+        \draw[->] (O.center) -- (16,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R_1=5$} -- (16,5);
@@ -159,7 +159,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         \node (O) at (0,0) {};
         \node (bmax) at (0,7) {};
 
-        \draw[->] (O.center) -- (16,0);
+        \draw[->] (O.center) -- (16,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R_2=7$} -- (16,7);
@@ -184,7 +184,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         \node (O) at (0,0) {};
         \node (bmax) at (0,5) {};
         \node at (16,0) {};
-        \draw[->] (O.center) -- (13,0);
+        \draw[->] (O.center) -- (13,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R_1=5$} -- (13,5);
@@ -208,7 +208,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         \node (bmax) at (0,7) {};
         \node at (16,0) {};
 
-        \draw[->] (O.center) -- (13,0);
+        \draw[->] (O.center) -- (13,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R_2=7$} -- (13,7);
@@ -225,7 +225,7 @@ de chaque activité $i\in \A$ de telle sorte que:
         \foreach \i in {0,...,7}
         {\draw (0,\i) -- (-0.1,\i);}
       \end{tikzpicture}}
-    \caption{Deux solutions réalisables pour l'exemple du \RCPSP.} 
+    \caption{Exemple de solutions réalisables pour le \RCPSP.} 
     \label{solution_ex_RCPSP}
   \end{figure}
 \end{ex}
@@ -239,18 +239,19 @@ optimale à ce problème.
 
 \subsubsection{Le problème cumulatif}
 
-\index{\CuSPidx}
-Le problème d'ordonnancement cumulatif (CuSP) permet de caractériser le fait que le projet implique une ressource (ou un sous-ensemble de ressources) de nature cumulative. Le \CUSP~peut être vu comme une relaxation de la
-variante décisionnelle du RCPSP où l'on ne considère qu'une ressource et
-où l'on remplace les contraintes de précédence par les fenêtres de temps
-qu'elles induisent.
+Le problème d'ordonnancement cumulatif (CuSP) permet de caractériser
+le fait que le projet implique une ressource (ou un sous-ensemble de
+ressources) de nature cumulative. Le \CUSP~peut être vu comme une
+relaxation de la variante décisionnelle du RCPSP où l'on ne considère
+qu'une ressource et où l'on remplace les contraintes de précédence par
+les fenêtres de temps qu'elles induisent.
 
 Formellement, le \CUSP~prend en entrée un ensemble $ \A=\{1,\dots,n\}$
 d'activités non préemptives à ordonnancer. Pour s'exécuter, une
 activité doit consommer une partie de la ressource $r_i$ et ce jusqu'à
 l'arrêt de l'activité, i.e. après un temps $p_i$ correspondant à la
-durée de l'activité $i$. Cette ressource est de type cumulatif et
-renouvelable, disponible en quantité $R$.
+durée de l'activité $i$. Cette ressource est de type cumulatif,
+discrète et renouvelable, disponible en quantité $R$.
 
 De plus, chaque activité dispose d'une fenêtre de temps $[\ES,\LE]$
 dans laquelle l'activité doit obligatoirement s'exécuter. Nous
@@ -309,7 +310,7 @@ suite du manuscrit.
         \node (bmax) at (0,3) {};
         \node at (9,0) {};
 
-        \draw[->] (O.center) -- (9,0);
+        \draw[->] (O.center) -- (9,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R=3$} -- (9,3);
@@ -337,7 +338,7 @@ suite du manuscrit.
         \node (bmax) at (0,3) {};
         \node at (10,0) {};
 
-        \draw[->] (O.center) -- (10,0);
+        \draw[->] (O.center) -- (10,0) node[below] {$t$};
         \draw (O.south) -- (bmax.north);
 
         \draw[dashed] (bmax.center) node[left=0.5pt] {\small $R=3$} -- (10,3);
@@ -356,7 +357,7 @@ suite du manuscrit.
         {\draw (0,\i) -- (-0.1,\i);}
       \end{tikzpicture}
     \end{minipage}
-    \caption{Deux solutions réalisables pour l'exemple du \CUSP.}
+    \caption{Exemple de solutions réalisables pour le \CUSP.}
     \label{solution_CUSP_ex}
   \end{figure}
 \end{ex}
