--- a/main_file.bib
+++ b/main_file.bib
@@ -222,6 +222,15 @@ abstract = "In deterministic sequencing and scheduling problems, jobs are to be 
   YEAR = {1994}
 }
 
+@ARTICLE{PSPLIB,
+    author = {Rainer Kolisch and Arno Sprecher},
+    title = {PSPLIB -- A project scheduling problem library},
+    journal = {EUROPEAN JOURNAL OF OPERATIONAL RESEARCH},
+    year = {1996},
+    volume = {96},
+    pages = {205--216}
+}
+
 @Inbook{DP,
 author="Derrien, Alban
 and Petit, Thierry",
@@ -400,6 +409,20 @@ doi="10.1007/978-3-642-33558-7_33",
 url="http://dx.doi.org/10.1007/978-3-642-33558-7_33"
 }
 
+
+@article{Carlier,
+author = {Carlier, Jacques and Latapie, Bruno},
+journal = {RAIRO - Operations Research - Recherche Opérationnelle},
+keywords = {resource constraints; project scheduling; minimal makespan; precedence and cumulative constraints; NP-hardness; branch and bound},
+language = {fre},
+number = {3},
+pages = {311-340},
+publisher = {EDP-Sciences},
+title = {Une méthode arborescente pour résoudre les problèmes cumulatifs},
+url = {http://eudml.org/doc/105017},
+volume = {25},
+year = {1991},
+}
 
 @Inbook{OQ,
 author="Ouellet, Pierre
