--- a/part2/CECSP/derivative1.tex
+++ b/part2/CECSP/derivative1.tex
@@ -35,7 +35,8 @@
     \draw[draw=Coral!90!black!90!,ultra thick] (9,6.5)-- (7,6.5);
     \draw[ultra thick] (8,4) node[rotate=-90, text width=4cm, align= center]
     {\scriptsize $\frac{1}{a_{i4}}(W_i- c_{i4}(\LE - \ES))$};
-    \draw[->] (O.center) -- (D.center);
+    \draw[->] (0,0) -- (D.center) node[below] {$t_2$};
+    \draw[->] (0,0) -- (0,7) node[left] {$\bbRS$};
   \end{tikzpicture}
 
 
