--- a/part2/CECSP/tabular.tex
+++ b/part2/CECSP/tabular.tex
@@ -95,11 +95,11 @@
                                                                                                          et
                                                                                                          $t_2
                                                                                                          >
-                                                                                                         \htd)$~}}
+                                                                                                         \htd$~}}
                                           & {\rotatebox{-90}{$t_2\ge
                                             \itd$}} &
                                                       {\rotatebox{-90}{$\emin
-                                                      < \ smax$ et $t_2 \le \emin$}} & {\rotatebox{-90}{$\emin \ge \smax $ et $t_2 \le \htd$}} \\
+                                                      < \smax$ et $t_2 \le \emin$}} & {\rotatebox{-90}{$\emin \ge \smax $ et $t_2 \le \htd$}} \\
         \hline
         \multirow{2}{*}{$\inter[\ES ][t_2]$} & \multirow{2}{*}{$\inter[\ES ][t_2]$} & $[\ES +\LE$ & \multirow{2}{*}{$\inter[\bdp{t_2}][t_2]$} & $\inter[\bdp{t_2}][t_2]$ &\multirow{2}{*}{$\inter[\ES ][t_2]$} & $\inter[\bdp{t_2}][t_2]$ & $\inter[\ES ][t_2]$ &\multirow{2}{*}{$\inter[\bdp{t_2}][t_2]$}& $[\ES +\LE $\\
                                           & & $ -t_2,t_2[$& & $\inter[\bup{t_2}][t_2]$ & & $\inter[\bup{t_2}][t_2]$ & $\inter[\bup{t_2}][t_2]$ & &  $-t_2,t_2[$ \\
