--- a/part2/CuSP/PPC.tex
+++ b/part2/CuSP/PPC.tex
@@ -221,7 +221,7 @@ cette variable en deux (ou plusieurs) sous-domaines.
         % etc.
       };
     \end{tikzpicture}
-    \caption{Exemple de parcours d'un arbre de recherche}
+    \caption{Exemple de parcours d'un arbre de recherche.}
     \label{fig:ex_tree}
   \end{figure}
 
@@ -344,7 +344,7 @@ l'exemple~\ref{ex:branchement}.
       };
     \end{tikzpicture}
     \caption{Exemple de parcours d'un arbre de recherche avec
-      détection d'incohérences}
+      détection d'incohérences.}
     \label{fig:ex_tree_check}
   \end{figure}
 
@@ -427,7 +427,7 @@ l'exemple~\ref{ex:branchement}.
       };
     \end{tikzpicture}
     \caption{Exemple de parcours d'un arbre de recherche avec fitrage
-      des domaines}
+      des domaines.}
     \label{fig:ex_tree_filtrage}
   \end{figure}
 
