--- a/part2/CuSP/PPC_CuSP.tex
+++ b/part2/CuSP/PPC_CuSP.tex
@@ -1,5 +1,6 @@
-\chapter[L'ordonnancement cumulatif en PPC]{L'ordonnancement cumulatif en programmation par contraintes}
-
+\chapter{Programmation par
+  contraintes et ordonnancement cumulatif}
+\chaptermark{L'ordonnancement cumulatif en PPC}
  \input{part2/CuSP/PPC.tex}
  \input{part2/CuSP/cumulative.tex}
 \input{part2/CuSP/conclusion2.tex}
