--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -330,7 +330,7 @@ manière à obtenir une fonction en escalier, appelée {\it profil
       \draw[dashed] (-1,5) -- (12.5,5);
       \draw[->] (-1,0) -- (-1,5.5) node[left] {$R=5$};
     \end{tikzpicture}
-    \caption{Exemple de profil obligatoire d'une ressource cumulative}
+    \caption{Exemple de profil obligatoire d'une ressource cumulative.}
     \label{fig_profil_CUSP}
   \end{figure}
   Dans l'exemple décrit par la figure~\ref{fig_profil_CUSP}, nous
