--- a/part3/CECSP/amelioration_modele.tex
+++ b/part3/CECSP/amelioration_modele.tex
@@ -1,5 +1,5 @@
 \section{Renforcement des modèles}
-
+\label{sec:amelioration_modele}
 Dans ce paragraphe, nous présentons des améliorations mises en place
 pour les modèles indexés par le temps et les modèles à événements du
 \RCPSP~et du \CECSP. 
