--- a/part3/RCPSP/modele_RCPSP.tex
+++ b/part3/RCPSP/modele_RCPSP.tex
@@ -150,6 +150,7 @@ notamment leur nombre respectif de variables et de contraintes.
 Dans un second temps, les modèles seront détaillés.
 
 \subsubsection{Motivations des modèles à événements}
+\label{sec:motiv_event_RCPSP}
 
 Parmi les formulations existantes pour le \RCPSP, celles basées sur des
 modèles indexés par le temps sont les plus utilisées dû au fait de la
