--- a/part2/CECSP/conclusion.tex
+++ b/part2/CECSP/conclusion.tex
@@ -1,24 +1,23 @@
 \section*{Conclusion}
 
-Dans ce chapitre nous avons présenté plusieurs adaptations de
-raisonnements existants dans le cadre du \CECSP. Dans un premier
-temps, nous avons montrer que certains des raisonnements pour la
-contrainte cumulative pouvaient être directement adaptés au \CECSP. En
-effet, dans le \CECSP~une activité peut être vue comme deux
-sous-activités, une rectangulaire et une représentant la partie
-malléable de l'activité. Considérer seulement la partie rectangulaire
-de l'activité dans le pire des cas, en temps ou en consommation de
-ressource, permet souvent l'adaptation directe de plusieurs
-raisonnement. Pour illustrer ce propos, nous avons présenter
-l'adaptation des raisonnement Time-Table, disjonctif et du Time-Table
-disjonctif. Cette technique nous a aussi permis de développer un
-nouvel algorithme de vérification basée sur les flots et utilisant la
-programmation linéaire. Cet algorithme peut être couplé avec d'autres
-algorithmes, d'ajustement ou de vérifcation, comme le Time-Table,
-disjonctif ou non, ou le raisonnement énergétique. En effet, ce
-dernier n'est pas dominé par le raisonnement énergétique.
+Dans ce chapitre, nous avons présenté plusieurs adaptations de
+raisonnements existants ainsi que de nouveaux raisonnements dans le
+cadre du \CECSP. Dans un premier temps, nous avons montré que certains
+des raisonnements pour la contrainte cumulative pouvaient être
+directement adaptés au \CECSP. En effet, dans le \CECSP~une activité
+peut être vue comme deux sous-activités, une rectangulaire et une
+représentant la partie malléable de l'activité. Considérer seulement
+la partie rectangulaire de l'activité dans le pire des cas, en temps
+ou en consommation de ressource, permet souvent l'adaptation directe
+de plusieurs raisonnements. Pour illustrer ce propos, nous avons
+présenté l'adaptation des raisonnements Time-Table, disjonctif et
+Time-Table disjonctif. Cette technique nous a aussi permis de
+développer un nouvel algorithme de vérification basée sur les flots et
+utilisant la programmation linéaire. Cet algorithme peut être couplé
+avec d'autres algorithmes, d'ajustement ou de vérification, comme le
+Time-Table, disjonctif ou non, ou le raisonnement énergétique.
 
-Cependant, d'autres raisonnement ne peuvent être adaptés
+Cependant, d'autres raisonnements ne peuvent être adaptés
 directement. C'est le cas du raisonnement énergétique pour lequel nous
 avons présenté l'adaptation au \CECSP~de l'algorithme de vérification
 ainsi que des ajustements des fenêtres de temps. De plus, une
