--- a/part2/CECSP/derivative2.tex
+++ b/part2/CECSP/derivative2.tex
@@ -35,6 +35,7 @@
     \draw[draw=LightBlue!90!black!90!,ultra thick] (8,8.5)-- (10,8.5);
     \draw[ultra thick] (9,4.75) node[rotate=-90,text width=4cm, align= center]
     {\scriptsize $\frac{1}{a_{i4}}(W_i- f_i(\bmax)(t_1-\ES) - c_{i4}(\LE-t_1))$};
-    \draw[->] (O.center) -- (D.center);
+    \draw[->] (0,0) -- (D.center) node[below] {$t_2$};
+    \draw[->] (0,0) -- (0,9) node[left] {$\bbRS$};
   \end{tikzpicture}
 
