--- a/part2/CECSP/derivative3.tex
+++ b/part2/CECSP/derivative3.tex
@@ -14,7 +14,8 @@
     \draw[ultra thick]  (3,2.2)
     node[rotate=-90]
     {\scriptsize  $\bmin(\LE-t_2)$};    
-    \draw[->] (O.center) -- (D.center) node[below] {$t_2$};
+    \draw[->] (0,0) -- (D.center) node[below] {$t_2$};
+    \draw[->] (0,0) -- (0,4) node[left] {$\bbRS$};
   \end{tikzpicture}
 
 
