--- a/part2/CECSP/tabularLS.tex
+++ b/part2/CECSP/tabularLS.tex
@@ -1,19 +1,21 @@
-\subcaptionbox{$t_2$ pour le placement à gauche}[0.45\linewidth]{
-\small
+\subcaptionbox{$t_2$ pour le placement à gauche}[\linewidth]{
+  \small  
     \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
-\hline \rule[-0.8em]{0pt}{2em} $\bmin=0$ & \multicolumn{2}{c|}{$W_i\le
-f_i(\bmin)(\LE -\ES )$} & \multicolumn{2}{c|}{$W_i\ge f_i(\bmin)(\LE
--\ES )$}\\ \hline \rotatebox{-90}{$t_1 < \emin$} & \rotatebox{-90}{$
-\ES \ge t_1 $} & \rotatebox{-90}{$\emin >t_1 > \ES$} &
-\rotatebox{-90}{$ \itu \ge t_1 $}& \rotatebox{-90}{$\emin >t_1 > \itu
-$}\\ \hline $\inter[t_1][\LE ]$ & $\inter[t_1][\LE ]$& $[
-t_1,\bu{t_1}[ $ & $\inter[t_1][\LE ]$& $[ t_1,\bu{t_1}[ $ \\ \hline
+      \hline \rule[-0.8em]{0pt}{2em} $\bmin=0$ & \multicolumn{2}{c|}{$W_i\le
+                                                 f_i(\bmin)(\LE -\ES )$} & \multicolumn{2}{c|}{$W_i\ge f_i(\bmin)(\LE
+                                                                           -\ES )$}\\ \hline \rotatebox{-90}{$t_1 < \emin$} & \rotatebox{-90}{$
+                                                                                                                              \ES \ge t_1 $} & \rotatebox{-90}{$\emin >t_1 > \ES$} &
+                                                                                                                                                                                     \rotatebox{-90}{$ \itu \ge t_1 $}& \rotatebox{-90}{$\emin >t_1 > \itu
+                                                                                                                                                                                                                        $}\\ \hline $\inter[t_1][\LE ]$ & $\inter[t_1][\LE ]$& $[
+                                                                                                                                                                                                                                                                               t_1,\bu{t_1}[ $ & $\inter[t_1][\LE ]$& $[ t_1,\bu{t_1}[ $ \\ \hline
     \end{tabular}
-  }
-\hspace{0.8cm}
-\subcaptionbox{$t_1$ pour le placement à gauche}[0.45\linewidth]{
-  \small
-     \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
+}
+
+
+\subcaptionbox{$t_1$ pour le placement à gauche}[\linewidth]{  
+ 
+    \small
+    \begin{tabular}{|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|>{\centering\arraybackslash}m{1.7cm}|}
       \hline
       \rule[-0.8em]{0pt}{2em} $\bmin=0$ & 
                                           \multicolumn{2}{c|}{$W_i\le
@@ -22,24 +24,24 @@ t_1,\bu{t_1}[ $ & $\inter[t_1][\LE ]$& $[ t_1,\bu{t_1}[ $ \\ \hline
                                                                     f_i(\bmin)(\LE
                                                                     -\ES
                                                                     )$}\\ 
-\hline 
+      \hline 
       \rotatebox{-90}{$t_2 > \smax$  }&\rotatebox{-90}{$ t_2 \ge \ES
                                         \lor t_2 \ge \ES + W_i/f_i(\bmin)$}
-                      & \rotatebox{-90}{$\emin < t_2 < \ES + W_i/f_i(\bmin)$} &
-                                                            \rotatebox{-90}{$t_2
-                                                                                \ge
-                                                                                \LE
-                                                                                \lor
-                                                                                t_2
-                                                                                \le
-                                                                                \emin$}
-                      & \rotatebox{-90}{$t_2 < \LE \lor t_2 > \emin  $}\\
-       \hline
-       $\inter[\ES ][t_2]$ &
-                                            $\inter[\ES
-                                             ][t_2]$& $[\bup{t_2},t_2[  $ & $\inter[\ES
-                                             ][t_2]$& $[\bup{t_2},t_2[  $ \\
+                                                                  & \rotatebox{-90}{$\emin < t_2 < \ES + W_i/f_i(\bmin)$} &
+                                                                                                                            \rotatebox{-90}{$t_2
+                                                                                                                            \ge
+                                                                                                                            \LE
+                                                                                                                            \lor
+                                                                                                                            t_2
+                                                                                                                            \le
+                                                                                                                            \emin$}
+                                                                  & \rotatebox{-90}{$t_2 < \LE \lor t_2 > \emin  $}\\
       \hline
-    \end{tabular}   
+      $\inter[\ES ][t_2]$ &
+                            $\inter[\ES
+                            ][t_2]$& $[\bup{t_2},t_2[  $ & $\inter[\ES
+                                                           ][t_2]$& $[\bup{t_2},t_2[  $ \\
+      \hline
+    \end{tabular}  
 }
 
