--- a/part2/CECSP/time_filter.tex
+++ b/part2/CECSP/time_filter.tex
@@ -4,8 +4,8 @@
 %%% End:
 
 \section{Algorithmes de filtrage basés sur le Time-Table}
-
-La section suivante présente plusieurs algorithmes de filtrage pour le
+\label{sec:time_CECSP}
+Le paragraphe suivant présente plusieurs algorithmes de filtrage pour le
 \CECSP. Tous ces algorithmes utilisant une adaptation du Time-Table
 pour le \CUSP, nous commençons donc par présenter brièvement comment
 ce raisonnement est modifié pour être adapté dans le cadre du \CECSP.
@@ -16,12 +16,12 @@ le \CUSP~\cite{Gay2015} et le dernier utilise une combinaison entre
 problème de flots et profil obligatoire.
 
 \subsection{Le Time-Table}
-\index{Time-Table!CECSP}
+\label{sec:TT_CECSP}
 Comme pour le \CUSP, le Time-Table pour le \CECSP~se base sur la
 notion de partie obligatoire des activités, i.e. l'intervalle pendant
 lequel une activité est en cours d'exécution dans tous les
-ordonnancements réalisables. Cependant, comme dans le cas du \CECSP,
-nous ne connaissons pas la durée exacte d'une activité, nous utilisons
+ordonnancements réalisables. Cependant, comme dans le cas du \CECSP
+nous ne connaissons pas la durée exacte d'une activité, nous utilisons 
 une borne inférieure sur sa durée pour calculer la date de début au
 plus tard, $\LS$, et la date de fin au plus tôt, $\EE$. Pour calculer
 cette borne, remarquons que la configuration permettant de finir une
@@ -29,16 +29,16 @@ activité le plus rapidement possible, est celle où l'activité est
 exécutée à son rendement maximal $\bmax$. De ce fait, une borne
 inférieure sur la durée de l'activité vaut $W_i/f_i(\bmax)$. Nous
 pouvons donc calculer la date de début au plus tard de l'activité,
-$\LS=\le -W_i/f_i(\bmax)$, et sa date de fin au plus tôt,
+$\LS=\LE -W_i/f_i(\bmax)$, et sa date de fin au plus tôt,
 $\EE=\ES +W_i/f_i(\bmax)$. La partie obligatoire d'une activité $i$ est
 alors définie de la même manière que pour le \CUSP, i.e la partie
-obligatoire de $i$ est l'intervalle $[\LS,\EE]$
+obligatoire de $i$ est l'intervalle $[\LS,\EE{[}$
 (cf. figure~\ref{fig_mand_CECSP}).
 
 Cependant, dans le cas où $\LS \le \EE$, i.e. où l'activité possède
 une partie obligatoire, nous pouvons seulement déduire que l'activité
 $i$ va consommer au moins une quantité $\bmin$ de la ressource durant
-toute sa partie obligatoire, et ce, quelque soit le moment où
+toute sa partie obligatoire, et ce, quel que soit le moment où
 l'activité est ordonnancée. La notion de profil obligatoire de la
 ressource est donc légèrement différente de celle définie pour le
 \CUSP~(cf. définition~\ref{def:profil_oblig},
@@ -46,7 +46,7 @@ page~\pageref{def:profil_oblig}).
 
 \begin{defi}
 Le profil obligatoire d'une ressource $TT_{\A}$ dans le cas du
-\CECSP~est définie de la façon suivante: 
+\CECSP~est défini de la façon suivante: 
 \[TT_{\A}(t)=\sum_{\substack{i \in \A\\\LS \le t \le \EE}} \bmin\quad
   \forall t \in \H\]
 Le problème est donc insatisfiable dans le cas où $\exists t \in \H\
@@ -58,7 +58,7 @@ Considérons l'activité suivante:
 
 \vspace{-0.5cm}
 \begin{center}
-  \begin{tabular}{|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}|}
+  \begin{tabular}{|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{2cm}|}
     \hline
     \ES & \LE & W_i & \bmin & \bmax & f_i(b_i(t))\\
     \hline
@@ -68,7 +68,7 @@ Considérons l'activité suivante:
 \end{center}
 
 Nous pouvons calculer sa date de début au plus tard,
-$\LS=\le -W_i/f_i(\bmax)=14 - 72/8 =5$, ainsi que sa date de fin au
+$\LS=\LE -W_i/f_i(\bmax)=14 - 72/8 =5$, ainsi que sa date de fin au
 plus tôt, $\EE=\ES + W_i/f_i(\bmax)=1 + 72/8 =10$. Comme $\EE > \LS$,
 l'activité possède une partie obligatoire qui est l'intervalle
 $[5,10[$ (voir
@@ -162,7 +162,7 @@ moins exécutée à $\bmin$ (voir figure~\ref{fig_mand_CECSP_c}).
 \end{figure}
 \end{ex}
 
-Comme pour le contrainte cumulative, le profil obligatoire peut aussi
+Comme pour la contrainte cumulative, le profil obligatoire peut aussi
 être calculé en $O(n)$ à l'aide d'un algorithme de balayage en triant
 au préalable les activités par date de début au plus tard et date de
 fin au plus tôt.
@@ -171,30 +171,32 @@ Nous détaillons maintenant l'adaptation du Time-Table disjonctif au
 \CECSP. 
 
 \subsection{Le Time-Table disjonctif}
+\label{sec:TTDR_CECSP}
 
 Le second algorithme de filtrage proposé repose sur un raisonnement
 appelé Time-Table disjonctif et utilisé, en premier lieu, pour le
-\CUSP (cf. paragraphe~\ref{sec:mix_CUSP}). Ce dernier repose sur le
+\CUSP~(cf. paragraphe~\ref{sec:mix_CUSP}). Ce dernier repose sur le
 raisonnement Time-Table décrit précédemment et sur le raisonnement
 disjonctif.
 
-Le raisonnement disjonctif dans le cadre du \CECSP, est très similaire
+Le raisonnement disjonctif dans le cadre du \CECSP~est très similaire
 à celui défini pour le \CUSP. La différence repose sur la construction
 des ensembles disjonctifs. Dans le cas du \CECSP, un couple
 d'activités ($i,j)$ sera dit disjonctif si $\bmin+\bmin[j] >R$. Dans
 ce cas, nous savons que:
 \begin{itemize}
-\item l'activité $i$ doit commencer après l'activité $j$, ou, 
+\item l'activité $i$ doit commencer après l'activité $j$, ou 
 \item l'activité $i$ doit finir avant l'activité $j$.  
 \end{itemize}
 
-Cette propriété permet, entre autre, d'ajuster la date de début au
-plus tôt de $j$. En effet, $\ES[j] \le \EE$ et $\LS \le \EE[j]$
-implique que $j$ doit commencer après la fin de l'activité $i$ (voir
-figure~\ref{fig:disj_CECSP}). De ce fait, la début de $j$ ne peut arriver
-avant la date de fin au plus tôt de $i$, et donc: $\ES[j] \ge \EE$. La
-règle de filtrage est ensuite similaire à celle mise en place pour le
-\CUSP. 
+Cette propriété permet notamment d'ajuster la date de début au
+plus tôt de d'une des deux activités. Considérons par exemple le cas
+où $\ES[j] \le \EE$ et $\LS < \EE[j]$; ces relations 
+impliquent que $j$ doit commencer après la fin de l'activité $i$ (voir
+figure~\ref{fig:disj_CECSP}). De ce fait, le début de $j$ ne peut
+arriver avant la date de fin au plus tôt de $i$, et donc: $\ES[j] \ge
+\EE$. La règle de filtrage est ensuite similaire à celle mise en place
+pour le \CUSP.
 
 \begin{reg}
 Soient $i, j \in \A, i \neq j$ telles que $\bmin+\bmin[j] < R$ et $\LS
@@ -203,14 +205,15 @@ ajustée et on a : $\ES[j] \ge \EE$.
 \end{reg}
 
 \begin{ex}
-Considérons les deux activités suivantes: 
+Considérons l'instance à deux activités et avec une ressource de
+capacité $3$ suivante: 
 \begin{center}
 \begin{tabular}{|P{1cm}|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{2cm}|}
     \hline
     act & \ES & \LE & W_i & \bmin & \bmax & f_i(b_i(t))  \\
     \hline
    i & 2 & 11 & 28 & 2 & 3 & 2*b_i(t) +1\\
-   j & 1 & 20 & 49 & 2 & 4 & voir fig~\ref{fig:fonct_CECSP}\\
+   j & 1 & 20 & 49 & 2 & 4 & voir fig.~\ref{fig:fonct_CECSP}\\
     \hline
   \end{tabular}
 \end{center}
@@ -242,15 +245,15 @@ et décrite dans la figure~\ref{fig:fonct_CECSP}
 \draw (1,6) node[left] {\footnotesize $6$};
 \draw (1,7) node[left] {\footnotesize $7$};
 \end{tikzpicture}
-\caption{Fonction $f_j(b_j(t))$}
+\caption{Fonction $f_j(b_j(t))$.}
 \label{fig:fonct_CECSP}
 \end{figure}
 
 Dans cet exemple, comme $\bmin +\bmin[j] =4 > 3$, $i$ et $j$ ne
 peuvent s'exécuter en parallèle. Si l'activité $i$ finit au temps
 $\LE= 11$ alors, elle chevauche forcément l'activité $j $ (voir
-figure~\ref{fig:disj_CECSPa} et~\ref{fig:disj_CECSPb}). Dans tous
-ordonnancement réalisable, $i$ est donc exécuté avant $j$ et la date de
+figure~\ref{fig:disj_CECSPa} et~\ref{fig:disj_CECSPb}). Dans tout
+ordonnancement réalisable, $i$ est donc exécutée avant $j$ et la date de
 début au plus tôt de $j$ peut donc être ajustée, i.e. $j$ ne peut
 commencer avant $\EE=6$ (voir
 figure~\ref{fig:disj_CECSPc}).
@@ -355,30 +358,29 @@ disjonctif au cas du \CECSP. Pour ce faire, nous commençons par
 adapter la définition d'intervalle minimum de superposition, puis nous
 présenterons les modifications apportées aux règles d'ajustement du
 \CUSP~afin que ces dernières soient applicables dans le cas du
-\CECSP. Enfin, l'extension de ces règles dans le cas où les activités
-ne possèdent pas de partie obligatoire sera décrit. Cette extension
-n'avait pas été présentée dans le chapitre sur le \CUSP~mais est
-décrite dans l'article~\cite{Gay2015}. 
+\CECSP.
 
-La notion d'intervalle minimum de superposition s'adapte naturellement
-au cas du \CECSP. En effet, cette intervalle représente l'ensemble
-minimal de points de temps tel que une activité $i$ est forcément en
-cours durant un de ces points. 
+La notion d'intervalle minimum de superposition est légèrement plus
+difficile à définir que dans le cas du \CUSP. En effet, cet intervalle
+représente l'ensemble minimal de points de temps tel qu'une activité
+$i$ est forcément en cours durant un de ces points et, comme au point
+$\EE$, l'activité n'est pas forcément en cours, il faut inclure le
+point ``juste à gauche'' de $\EE$ dans $moi_i$.  La définition peut
+donc s'écrire de la manière suivante. 
 
 \begin{defi}
 \label{des:moi_CUSP} 
-Soit $\EE^{-}$ le point le plus proche de $\EE$, i.e. $\forall \delta
+Soit $\EE^{-}$ le point le plus proche de $\EE > 0$, i.e. $\forall \delta
 >0 , |\EE^{-} -\EE| \le \delta$. L'intervalle minimum de
 superposition d'une activité $i$,noté $moi_i$, est alors défini par
 $moi_i=[\EE^{-},\LS{]}$ si $i$ ne possède pas de partie obligatoire et
 $moi_i=\emptyset$ sinon.   
 \end{defi}
 
-
 \begin{ex}
 La figure~\ref{fig:moi_CECSP} illustre l'intervalle minimum de
 superposition d'une activité $i$ ne possédant pas de partie
-obligatoire. En effet, quelque soit la position de l'activité $i$,
+obligatoire. En effet, quelle que soit la position de l'activité $i$,
 elle intersecte forcément $moi_i$.
 \begin{figure}[!htb]
   \begin{center}
@@ -420,42 +422,48 @@ elle intersecte forcément $moi_i$.
 \end{figure}
 \end{ex}
 
-La notion d'intervalle minimum de superposition permet, dans un
-premier temps, d'améliorer le raisonnement disjonctif. En effet, dans
-le cas où deux activités $i$ et $j$ ne peuvent être exécutée en
-parallèle, la fenêtre de temps de $j$ ne peut contenir un point de
-temps que $i$ devra forcément chevaucher, i.e. contenu dans
-$moi_i$. Ceci nous permet de définir la règle d'ajustement suivante:  
+Cependant, pour s'abstraire du point $\EE^{-}$ et faciliter les
+notations, nous n'utiliserons pas cet intervalle pour définir les
+règles d'ajustement mais, à la place, nous les écrirons à l'aide
+d'inégalité stricte. Ces intervalles apparaîtront cependant sur les
+figures illustrant ces règles afin de faciliter leur compréhension et
+de les rapprocher de celles définies pour le \CUSP.
+
+Pour améliorer le raisonnement disjonctif, nous utilisons l'idée
+suivante: si deux activités $i$ et $j$ ne peuvent être exécutées en
+parallèle, alors la fenêtre de temps de $j$ ne peut contenir un point
+de temps que $i$ devra forcément chevaucher. Ceci nous permet de
+définir la règle d'ajustement suivante:   
 
 \begin{reg}
 \label{reg:RDR_CECSP}
   Soient deux activités $i$ et $j$ telles que $i$ ne possède pas de
-  partie obligatoire et que $\bmin + \bmin[j] > R$. Si ordonnancer l'activité
- $j$ à sa date de début au plus tôt la fait se superposer complètement
- à l’intervalle minimal de superposition de $i$ ($moi_i \subseteq
- [\ES[j],\EE[j]{]}$), alors $\ES[j] \ge \EE$.
+  partie obligatoire et $\bmin + \bmin[j] > R$. Si $\ES[j] < \EE$ et $
+  \EE[j] \le \LS$ alors $\ES[j] \ge \EE$.
 \end{reg}
 
 \begin{ex}
-Considérons les deux activités suivantes: 
+Considérons l'instance à deux activités et avec une ressource de
+capacité $3$ suivante: 
 \begin{center}
 \begin{tabular}{|P{1cm}|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{2cm}|}
     \hline
     act & \ES & \LE & W_i & \bmin & \bmax & f_i(b_i(t))  \\
     \hline
    i & 0 & 14 & 28 & 2 & 3 & 2*b_i(t) +1\\
-   j & 2 & 20 & 49 & 2 & 4 & voir fig~\ref{fig:fonct_CECSP}\\
+   j & 2 & 20 & 49 & 2 & 4 & voir fig.~\ref{fig:fonct_CECSP}\\
     \hline
   \end{tabular}
 \end{center}
 
 
 La règle~\ref{reg:RDR_CECSP} est illustrée par la
-figure~\ref{fig:RDR_CECSP}. Dans les figures~\ref{fig:RDR_CECSPa} et~\ref{fig:RDR_CECSPb}, on
-peut constater que si l'activité $j$
+figure~\ref{fig:RDR_CECSP}. Dans les figures~\ref{fig:RDR_CECSPa}
+et~\ref{fig:RDR_CECSPb}, on peut constater que si l'activité $j$
 commence à $\ES[j]$, alors elle intersecterait complètement $moi_i$ et
-il serait impossible d'ordonnancer $i$. Sur la figure~\ref{fig:RDR_CECSPc}, $\ES[j]$ a été ajusté et l'activité $j$ ne peut commencer
-avant  $\min\{t \in \H | t \in moi_i\}$.
+il serait impossible d'ordonnancer $i$. Sur la
+figure~\ref{fig:RDR_CECSPc}, $\ES[j]$ a été ajusté et l'activité $j$
+ne peut commencer avant $\EE$.
   \begin{figure}[htb!] 
     \subcaptionbox{Si $j$ commence au temps $2$...\label{fig:RDR_CECSPa}}[0.45\linewidth]{
     \centering
@@ -559,7 +567,7 @@ avant  $\min\{t \in \H | t \in moi_i\}$.
 \end{figure}
 \end{ex}
 
-La règle~\ref{reg:RDR_CUSP} compare seulement les consommations de $i$
+La règle~\ref{reg:RDR_CECSP} compare seulement les consommations de $i$
 et de $j$ avec la capacité de la ressource $R$. Cependant, les
 consommations obligatoires des autres activités peuvent ne pas laisser
 $R$ unités de ressource durant l'intersection de $i$ et de $j$. La
@@ -567,17 +575,16 @@ règle suivante prend donc en considération le profil obligatoire de la
 ressource. 
 
 \begin{reg}
-\label{reg:TTDR_CUSP}
-Soient donc $i$ et $j$ deux activités qui ne possèdent pas de partie
-obligatoire et telles que $ \bmin +\bmin[j] + \min_{t \in moi_i} TT_{\A}(t) >
-R$.   Si ordonnancer l'activité
- $j$ à sa date de début au plus tôt la fait se superposer complètement
- à l’intervalle minimal de superposition de $i$ ($moi_i \subseteq
- [\ES[j],\EE[j]{]}$), alors $\ES[j] \ge \EE$.
+\label{reg:TTDR_CECSP}
+Soient $i$ et $j$ deux activités qui ne possèdent pas de partie
+obligatoire et telles que $ \bmin +\bmin[j] + \min_{\EE \le t \le \LS}
+TT_{\A}(t) > R$. Si $\ES[j] < \EE$ et $ \EE[j] \le \LS$ alors $\ES[j]
+\ge \EE$.
 \end{reg}
 
 \begin{ex}
-Considérons les deux activités suivantes: 
+Considérons l'instance à deux activités et avec une ressource de
+capacité $3$ suivante: 
 \begin{center}
 \begin{tabular}{|P{1cm}|P{1cm}P{1cm}P{1cm}P{1cm}P{1cm}P{2cm}|}
     \hline
@@ -585,7 +592,7 @@ Considérons les deux activités suivantes:
     \hline
    i & 2 & 11 & 21 & 1 & 2 & 2*b_i(t) +1\\
    j & 1 & 20 & 14 & 1 & 2 & b_i(t)\\
-   k & 2 & 11 & 18 & 2 & 2 & \frac{1}{3}b_i(t) + \frac{4}{3}\\
+   k & 2 & 11 & 18 & 2 & 2 & \frac{1}{3}*b_i(t) + \frac{4}{3}\\
     \hline
   \end{tabular}
 \end{center}
@@ -639,7 +646,7 @@ formé par $\ES[j]$ et $\EE[j]$, i.e. $[1,10[$. De plus, le minimum du
 profil de consommation de la ressource dans $moi_i$ est de $2$. Donc,
 les activités $i$ et $j$, consommant  au minimum  $1$ unité
 de ressource, ne peuvent se chevaucher l'intervalle $[4,8]$. Donc
-$\ES[j]$ peut être ajuster à $5$. 
+$\ES[j]$ peut être ajustée à $5$. 
 \end{ex}
 
 Certains raisonnements mis en place dans le cadre du \CUSP~peuvent
@@ -655,17 +662,17 @@ Le prochain paragraphe présente quant à lui un raisonnement couplant
 modélisation de problème de flots et Time-Table. 
 
 \subsection{Le Time-Table basé sur les flots}
-
+\label{sec:TTFlot_CECSP}
 Le raisonnement décrit dans ce paragraphe propose d'intégrer le
 raisonnement Time-Table dans un programme linéaire basé sur un
 problème de flots. Ce programme linéaire peut ensuite être utilisé
 comme algorithme de vérification, ou checker, pour s'assurer que les
 valeurs des domaines des variables ne vont pas amener à une
 incohérence. Il peut aussi être couplé avec des algorithmes de
-propagation tels que ceux décrits dans le paragraphe précèdent pour
+propagation tels que ceux décrits dans le paragraphe précédent pour
 décrire un raisonnement complet. 
 
-L'idée de l'algorithme de vérification est donc de s'assurer que, une
+L'idée de l'algorithme de vérification est donc de s'assurer qu' une
 fois les parties obligatoires des activités fixées, l'aire disponible
 est suffisante pour ordonnancer le reste des activités en tenant
 compte des fenêtres de temps de chaque activité. Pour ce faire, nous
@@ -690,14 +697,14 @@ variables. Le premier correspond à la quantité de ressource consommée
 par une activité $i$ dans la période $[t_q,t_{q+1}[$ et est noté
 $b_{iq},\ i \in \A,\ q \in \Q^*$. Le second permet de modéliser la
 quantité d'énergie apportée à une activité dans cette même période et
-est noté $w_{iq},\ i \in \A,\ q \in \Q^*$. Le programme linéaire peut
-alors s'écrire de la manière suivante:
+est noté $w_{iq},\ i \in \A,\ q \in \Q^*$. Le problème de
+\CECSP~relâché peut alors se formuler par le programme linéaire suivant:
 \begin{align}
   &\sum_{i \in \A} b_{iq} \le R(t_{q+1}- t_q) & & 
   \forall q \in \Q^* \label{eq:flot1}\\
-  &b_{iq} \ge b_i^{min}(t_{q+1}-t_q) & & \forall i \in \A,
+  &b_{iq} \ge \bmin (t_{q+1}-t_q) & & \forall i \in \A,
   \ \forall q \in \Q^*\ | \ \LS \le t_q \le \EE \label{eq:flot2}\\
-  &b_{iq} \le b_i^{max} (t_{q+1} - t_q) & &
+  &b_{iq} \le \bmax (t_{q+1} - t_q) & &
   \forall i \in \A,\ \forall q \in \Q^* \label{eq:flot3}\\
   &b_{iq}=0 & & \forall i \in \A, \ 
   \forall q \in \Q^*\  |\ t_q \not\in [\ES,\LE{]} \label{eq:flot4}\\  
@@ -710,11 +717,11 @@ alors s'écrire de la manière suivante:
   \end{align}
 
 Dans cette formulation, la contrainte~\eqref{eq:flot1} permet
-d'assurer que la capacité de la ressource ne soit pas excédée. 
+d'assurer que la capacité de la ressource n'est pas excédée. 
 
 La contrainte~\eqref{eq:flot2} modélise la partie
 obligatoire d'une activité. En effet, la contrainte affirme que
-l'activité doit consommée une quantité de ressource supérieure à
+l'activité doit consommer une quantité de ressource supérieure à
 $\bmin$ durant l'intervalle $[\LS,\EE{[}$.
 
 La contrainte~\eqref{eq:flot3}  garantit que l'activité ne consomme
@@ -728,20 +735,21 @@ modéliser l’énergie apportée à l’activité $i$ en fonction de la
 quantité de ressource consommée par cette même activité dans
 l’intervalle $[t_q , t_{q+1}]$. Notons d’abord l’utilisation d’une
 inégalité dans la contrainte~\eqref{eq:flot5} et non d’une égalité. La
-justification de la validité de cette contrainte est faite dans la
+justification de la validité de cette contrainte est faite dans le 
 chapitre~\ref{sec:PLNE_CECSP}. La contrainte~\eqref{eq:flot6}
-stipule quant à elle que si l'activité ne consomme pas de ressource,
-i.e. $b_{iq}=0$, alors elle ne reçoit pas d'énergie, i.e. $w_{iq}=0$
+stipule quant à elle que, pour une constante $M$ suffisament grande,
+si l'activité ne consomme pas de ressource, i.e. $b_{iq}=0$, alors
+elle ne reçoit pas d'énergie, i.e. $w_{iq}=0$.
 
 La contrainte~\eqref{eq:flot7} assure que la quantité d'énergie
-requise est bien apporté à l'activité. 
+requise est bien apportée à l'activité. 
 
 Notons que le modèle possède $2 \times (n \times (4n - 1)\,) = 8n^2 -
 2n$ variables continues et au plus $4n^2(4+P) + n (1 -
 P) - 1$ contraintes, avec $P=\max_{i\in\A}|\P_i|$.
 
 \begin{ex}
-Considérons l'instance à $3$ activité et avec une ressource de
+Considérons l'instance à $3$ activités et avec une ressource de
 capacité $R=3$ suivante:
 
 \begin{center}
@@ -786,12 +794,11 @@ Time-Table disjonctif n'aurait pas détecté l'incohérence.
 Dans ce paragraphe, nous avons montré que certaines extensions des
 relaxations du \CUSP~était directement adaptable au cas du \CECSP. En
 effet, nous avons décrit l'extension des raisonnements Time-Table,
-disjonctif et Time-Table disjonctif. D'autres raisonnements existant
-font aussi partie de cette catégorie comme, par exemple, le
-Edge-Finding et ses extensions. Nous avons aussi montré que la
-programmation linéaire pouvait être utilisée pour décrire un
-algorithme de vérification qui pouvait être couplée à des algorithmes
-d'ajustements existants.
+disjonctif et Time-Table disjonctif. D'autres raisonnements existants
+font aussi partie de cette catégorie par exemple le Edge-Finding et
+ses extensions. Nous avons aussi montré que la programmation linéaire
+pouvait être utilisée pour décrire un algorithme de vérification qui
+pouvait être couplée à des algorithmes d'ajustements existants.
 
 Dans le paragraphe suivant nous décrivons une extension non triviale du
 raisonnement énergétique, un des raisonnements les plus forts pour le \CUSP.
